<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/icon_history_24dp"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/icon_scan_24dp"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/icon_friends_24dp"
        android:title="@string/title_friends" />

    <item
        android:id="@+id/navigation_logout"
        android:title="Log Out"
        android:icon="@drawable/icon_login_24dp"/>

</menu>