...
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- FAB anchored to bottom right -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Add a Friend"
        android:src="@drawable/ic_add_friend"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="82dp"
...
